# dcmqi

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README  README.md  RELEASE.md  SUMMARY.md  SuperBuild.cmake  appveyor.yml  book.json  bower.json  circle.yml  custom-autocomplete.html  docker_entry.sh  home.html  index.html  meta.json  package.json  pmap.html  seg.html  validators.html
.circleci/: config.yml
.github/: dependabot.yml
.github/wokrlfows/: cmake.yml
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-win.yml  cmake.yml  finalize-latest.yml  release-notes.yml
CMake/: CTestCustom.cmake.in  DCMQICPackOptions.cmake.in  DCMQIConfig.cmake.in  ExternalProjectDependency.cmake  FindGit.cmake  ctkBlockCheckDependencies.cmake  ctkMacroCheckExternalProjectDependency.cmake  dcmqiBlockSetCMakeOSXVariables.cmake  dcmqiConfigureVersionTarget.cmake  dcmqiFunctionExtractGitTagNames.cmake  dcmqiMacroExtractRepositoryInfo.cmake  dcmqiTest.cmake  dcmqiVersion.cmake  dcmqiVersionConfigure.h.in  dcmqiVersionFromGit.cmake
CMakeExternals/: DCMTK.cmake  ITK.cmake  SlicerExecutionModel.cmake  zlib.cmake
Design/: DICOMSegmentationConverter.puml  DataFlow.puml
apps/: CMakeLists.txt
apps/paramaps/: CMakeLists.txt  itkimage2paramap.cxx  itkimage2paramap.xml  paramap2itkimage.cpp  paramap2itkimage.cxx  paramap2itkimage.xml
apps/paramaps/Testing/: CMakeLists.txt  itkimage2paramapTest.cxx  paramap2itkimageTest.cxx
apps/seg/: CMakeLists.txt  Converter.cpp  Converter.h  DCMQIHelper.cpp  DCMQIHelper.h  Helper.cpp  Helper.h  ImageSEGConverter.cpp  ImageSEGConverter.h  JSONMetaInformationHandler.cpp  JSONMetaInformationHandler.h  SegmentAttributes.cpp  SegmentAttributes.h  SegmentInformationJSONHandler.cpp  SegmentInformationJSONHandler.h  bin2labelsegimage.cxx  bin2labelsegimage.xml  dcmqi.cpp  itkTestMain.h  itkTestingComparisonImageFilter.h  itkTestingComparisonImageFilter.hxx  itkimage2segimage.cxx  itkimage2segimage.xml  preproc.h  segimage2itkimage.cxx  segimage2itkimage.xml
apps/seg/Testing/: CMakeLists.txt  Itk2DicomHandlerOverloadEquivalenceTest.cxx  segimage2itkimageTest.cxx
apps/sr/: CMakeLists.txt  tid1500converter.cxx  tid1500converter.xml  tid1500reader.cxx  tid1500reader.xml  tid1500writer.cxx  tid1500writer.xml
apps/sr/Testing/: CMakeLists.txt
bower_components/ajv/: .bower.json
bower_components/angular/: .bower.json
bower_components/angular-download/: .bower.json  LICENSE  README.md  angular-download.js  build.txt  gulpfile.js  package.json
bower_components/angular-material/: .bower.json
bower_components/angular-material-icons/: .bower.json
bower_components/angular-route/: .bower.json
bower_components/angular-ui-notification/: .bower.json
bower_components/angular-xml/: .bower.json  LICENSE  bower.json  index.js
bower_components/clipboard/: .bower.json
bower_components/dicomParser/: .bower.json
bower_components/es6-promise/: .bower.json  bower.json
bower_components/github-fork-ribbon-css/: .bower.json  gh-fork-ribbon.css
bower_components/jsonld/: .bower.json
bower_components/md-color-picker/: .bower.json
bower_components/ng-file-upload/: .bower.json  package.js
bower_components/ngprogress/: .bower.json
bower_components/requirejs/: .bower.json
bower_components/tinycolor/: .bower.json
bower_components/v-accordion/: .bower.json
bower_components/x2js/: .bower.json
data/ct-3slice/: 03.dcm  liver_seg.nrrd  spine_seg.nrrd
data/sr-example/: sr.dcm  (+1 more)
doc/: CMakeLists.txt  anatomic-context-schema.json  bmmr-example.json  common-schema.json  dcmqi-itk2seg.json  dcmqi-pm.json  dcmqi.jsonld  exampledata.json  itkimage2segimage.md  pm-example-float.json  pm-example.json  pm-schema.json  sample.info  seg-example.json  seg-example_multiple_segments.json  seg-schema.json  segimage2itkimage.md  segment-context-common-schema.json  segment-context-schema.json  sr-common-schema.json  sr-tid1500-ct-liver-example.json  sr-tid1500-example.json  sr-tid1500-schema.json
docker/: Makefile
docs/: opensource.md
include/: ConverterBase.h  Helper.h  ImageSEGConverter.h  JSONMetaInformationHandlerBase.h  JSONParametricMapMetaInformationHandler.h  JSONSegmentationMetaInformationHandler.h  ParaMapConverter.h  QIICRConstants.h  QIICRUIDs.h  SegmentAttributes.h  TID1500Converter.h  itkTestingComparisonImageFilter.h  itkTestingComparisonImageFilter.hxx
js/: app.js  bootstrap.js  controllers.js  directives.js  main.js  routes.js  services.js
jsoncpp/: jsoncpp.cpp
lib/: ConverterBase.cpp  ConverterBase.h  Exceptions.h  Helper.cpp  Helper.h  ImageSEGConverter.cpp  ImageSEGConverter.h  JSONMetaInformationHandler.cpp  JSONMetaInformationHandler.h  JSONMetaInformationHandlerBase.cpp  JSONMetaInformationHandlerBase.h  JSONParametricMapMetaInformationHandler.cpp  JSONParametricMapMetaInformationHandler.h  JSONSegmentationMetaInformationHandler.cpp  JSONSegmentationMetaInformationHandler.h  ParaMapConverter.cpp  ParaMapConverter.h  SegmentAttributes.cpp  SegmentAttributes.h  SeriesAttributes.cpp  SeriesAttributes.h  TID1500Converter.cpp  TID1500Converter.h
libsrc/: Bin2Label.cpp  CMakeLists.txt  ColorUtilities.cpp  ConverterBase.cpp  DICOMFrame.cpp  Dicom2ItkConverter.cpp  Dicom2ItkConverterBase.cpp  Dicom2ItkConverterBin.cpp  Dicom2ItkConverterLabel.cpp  Helper.cpp  ImageSEGConverter.cpp  ImageVolume.cpp  ImageVolumeGeometry.cpp  Itk2DicomConverter.cpp  JSONMetaInformationHandlerBase.cpp  JSONParametricMapMetaInformationHandler.cpp  JSONSegmentationMetaInformationHandler.cpp  MultiframeConverter.cpp  MultiframeObject.cpp  OverlapUtil.cpp  ParaMapConverter.cpp  ParametricMapConverter.cpp  ParametricMapObject.cpp  SegmentAttributes.cpp  SegmentVolume.cpp  SegmentationImageConverter.cpp  SegmentationImageObject.cpp  TID1500Converter.cpp  TID1500Reader.cpp
stylesheets/: style.css
util/: ColorUtilities.java  SR2SC.py  TestColorConversions_SRGB_CIELabPCS.java  cliwrap.py  comparejson.py  dumpSEGPixelData.py  filterContext.py  jsoncompare.py  mdai2dcm.py  mergeJSONCodesWithCSVColors.py  xml2json.py
(+926 files in other folders)
